{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 274,
  "lineage": "febc3547-158d-b6e3-5fc5-f88ba882d552",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:654676797716:loadbalancer/app/demo-load-balancer/caa0116bcb60b282",
            "arn_suffix": "app/demo-load-balancer/caa0116bcb60b282",
            "dns_name": "demo-load-balancer-134099427.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:654676797716:loadbalancer/app/demo-load-balancer/caa0116bcb60b282",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-load-balancer",
            "security_groups": [
              "sg-0035e986345274921"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04ec51d4ef9da0064"
              },
              {
                "subnet_id": "subnet-0b646b04505688837"
              }
            ],
            "subnets": [
              "subnet-04ec51d4ef9da0064",
              "subnet-0b646b04505688837"
            ],
            "tags": {
              "Environment": "Test",
              "Name": "demo-load-balancer"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "demo-load-balancer"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0242f03df17fc8572",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this",
            "module.lb_security_group.aws_security_group.this",
            "module.lb_security_group.aws_security_group.this_name_prefix",
            "module.vpc-demo.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:654676797716:listener/app/demo-load-balancer/caa0116bcb60b282/f3f60f469fbe4cb5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:654676797716:targetgroup/demo-20211007212908380900000002/68dd79cec9c204cc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:654676797716:listener/app/demo-load-balancer/caa0116bcb60b282/f3f60f469fbe4cb5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:654676797716:loadbalancer/app/demo-load-balancer/caa0116bcb60b282",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "Test"
            },
            "tags_all": {
              "Environment": "Test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.lb_security_group.aws_security_group.this",
            "module.lb_security_group.aws_security_group.this_name_prefix",
            "module.vpc-demo.aws_subnet.public",
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:654676797716:targetgroup/demo-20211007212908380900000002/68dd79cec9c204cc",
            "arn_suffix": "targetgroup/demo-20211007212908380900000002/68dd79cec9c204cc",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:654676797716:targetgroup/demo-20211007212908380900000002/68dd79cec9c204cc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "demo-20211007212908380900000002",
            "name_prefix": "demo-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "demo-"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "demo-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "dependencies": [
            "module.vpc-demo.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:security-group/sg-0035e986345274921",
            "description": "Security group for loadbalancer.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0035e986345274921",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "loadBalancer-demo-20211007212908380200000001",
            "name_prefix": "loadBalancer-demo-",
            "owner_id": "654676797716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "loadBalancer-demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "loadBalancer-demo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-demo.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-2528653700",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0035e986345274921",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_security_group.aws_security_group.this",
            "module.lb_security_group.aws_security_group.this_name_prefix",
            "module.vpc-demo.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-2323194453",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0035e986345274921",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_security_group.aws_security_group.this",
            "module.lb_security_group.aws_security_group.this_name_prefix",
            "module.vpc-demo.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:security-group/sg-09d852bc26da83710",
            "description": "Security group for application-level instances.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d852bc26da83710",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0035e986345274921"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo_security_group_app-20211007212908382000000003",
            "name_prefix": "demo_security_group_app-",
            "owner_id": "654676797716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "demo_security_group_app",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo_security_group_app",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-demo.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group-app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-676632596",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09d852bc26da83710",
            "self": false,
            "source_security_group_id": "sg-0035e986345274921",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group-app.aws_security_group.this",
            "module.security-group-app.aws_security_group.this_name_prefix",
            "module.vpc-demo.aws_vpc.this",
            "module.lb_security_group.aws_security_group.this",
            "module.lb_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-2821224842",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09d852bc26da83710",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group-app.aws_security_group.this",
            "module.security-group-app.aws_security_group.this_name_prefix",
            "module.vpc-demo.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-1575634536",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09d852bc26da83710",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group-app.aws_security_group.this",
            "module.security-group-app.aws_security_group.this_name_prefix",
            "module.vpc-demo.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:security-group/sg-0889742c41050b860",
            "description": "Security group for database-level instances.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0889742c41050b860",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d852bc26da83710"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-security-group-demo-20211007212908382400000004",
            "name_prefix": "db-security-group-demo-",
            "owner_id": "654676797716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "db-security-group-demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "db-security-group-demo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-demo.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 3306,
            "id": "sgrule-2261823723",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0889742c41050b860",
            "self": false,
            "source_security_group_id": "sg-09d852bc26da83710",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-demo.aws_vpc.this",
            "module.security-group-app.aws_security_group.this",
            "module.security-group-app.aws_security_group.this_name_prefix",
            "module.security_group_db.aws_security_group.this",
            "module.security_group_db.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-4202084975",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0889742c41050b860",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_db.aws_security_group.this",
            "module.security_group_db.aws_security_group.this_name_prefix",
            "module.vpc-demo.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-demo",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-094c1b9e1db3143fb",
            "domain": "vpc",
            "id": "eipalloc-02b534216d193bd37",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0a0dae2bbafd4a64a",
            "private_dns": "ip-192-168-16-222.us-east-2.compute.internal",
            "private_ip": "192.168.16.222",
            "public_dns": "ec2-3-14-26-84.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.26.84",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03d7b3597aff5eb38",
            "domain": "vpc",
            "id": "eipalloc-0c70a5a8b8d108bcf",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0b09b50b62483bfe0",
            "private_dns": "ip-192-168-17-254.us-east-2.compute.internal",
            "private_ip": "192.168.17.254",
            "public_dns": "ec2-3-15-66-47.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.66.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-us-east-2b",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-demo",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:internet-gateway/igw-015d8204f840d9011",
            "id": "igw-015d8204f840d9011",
            "owner_id": "654676797716",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "dependencies": [
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-demo",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b534216d193bd37",
            "connectivity_type": "public",
            "id": "nat-061eb35c3ca20f7f7",
            "network_interface_id": "eni-0a0dae2bbafd4a64a",
            "private_ip": "192.168.16.222",
            "public_ip": "3.14.26.84",
            "subnet_id": "subnet-0b646b04505688837",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-demo.aws_eip.nat",
            "module.vpc-demo.aws_internet_gateway.this",
            "module.vpc-demo.aws_subnet.public",
            "module.vpc-demo.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c70a5a8b8d108bcf",
            "connectivity_type": "public",
            "id": "nat-0e4b2e67d6e17ab90",
            "network_interface_id": "eni-0b09b50b62483bfe0",
            "private_ip": "192.168.17.254",
            "public_ip": "3.15.66.47",
            "subnet_id": "subnet-04ec51d4ef9da0064",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-us-east-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-demo.aws_eip.nat",
            "module.vpc-demo.aws_internet_gateway.this",
            "module.vpc-demo.aws_subnet.public",
            "module.vpc-demo.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-demo",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b583d7f169e41fda1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-061eb35c3ca20f7f7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b583d7f169e41fda",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-demo.aws_eip.nat",
            "module.vpc-demo.aws_internet_gateway.this",
            "module.vpc-demo.aws_nat_gateway.this",
            "module.vpc-demo.aws_route_table.private",
            "module.vpc-demo.aws_subnet.public",
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078dd5876c7da4f8e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e4b2e67d6e17ab90",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078dd5876c7da4f8e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-demo.aws_subnet.public",
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-demo.aws_eip.nat",
            "module.vpc-demo.aws_internet_gateway.this",
            "module.vpc-demo.aws_nat_gateway.this",
            "module.vpc-demo.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-demo",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-015d8204f840d9011",
            "id": "r-rtb-0851504a4d607bf5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0851504a4d607bf5d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-demo.aws_internet_gateway.this",
            "module.vpc-demo.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-demo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:route-table/rtb-0b583d7f169e41fda",
            "id": "rtb-0b583d7f169e41fda",
            "owner_id": "654676797716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-061eb35c3ca20f7f7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:route-table/rtb-078dd5876c7da4f8e",
            "id": "rtb-078dd5876c7da4f8e",
            "owner_id": "654676797716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e4b2e67d6e17ab90",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-demo.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-demo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:route-table/rtb-0851504a4d607bf5d",
            "id": "rtb-0851504a4d607bf5d",
            "owner_id": "654676797716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015d8204f840d9011",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-demo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0374f435b9d6f056c",
            "route_table_id": "rtb-0b583d7f169e41fda",
            "subnet_id": "subnet-02ad46de7051edfd1"
          },
          "dependencies": [
            "module.vpc-demo.aws_route_table.private",
            "module.vpc-demo.aws_subnet.private",
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0773707b64a3b9c11",
            "route_table_id": "rtb-078dd5876c7da4f8e",
            "subnet_id": "subnet-020edecd7023d9845"
          },
          "dependencies": [
            "module.vpc-demo.aws_route_table.private",
            "module.vpc-demo.aws_subnet.private",
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6495f379a276954",
            "route_table_id": "rtb-0b583d7f169e41fda",
            "subnet_id": "subnet-0b8a8b75f720e3930"
          },
          "dependencies": [
            "module.vpc-demo.aws_route_table.private",
            "module.vpc-demo.aws_subnet.private",
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b8ed0d193b4cbc1",
            "route_table_id": "rtb-078dd5876c7da4f8e",
            "subnet_id": "subnet-00a33e98a0bf9a1bf"
          },
          "dependencies": [
            "module.vpc-demo.aws_route_table.private",
            "module.vpc-demo.aws_subnet.private",
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-demo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0112b710e4327b421",
            "route_table_id": "rtb-0851504a4d607bf5d",
            "subnet_id": "subnet-0b646b04505688837"
          },
          "dependencies": [
            "module.vpc-demo.aws_route_table.public",
            "module.vpc-demo.aws_subnet.public",
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087136dc5d7856a44",
            "route_table_id": "rtb-0851504a4d607bf5d",
            "subnet_id": "subnet-04ec51d4ef9da0064"
          },
          "dependencies": [
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-demo.aws_route_table.public",
            "module.vpc-demo.aws_subnet.public",
            "module.vpc-demo.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-demo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:subnet/subnet-02ad46de7051edfd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-02ad46de7051edfd1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654676797716",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "dependencies": [
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:subnet/subnet-020edecd7023d9845",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.6.0/24",
            "id": "subnet-020edecd7023d9845",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654676797716",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "dependencies": [
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:subnet/subnet-0b8a8b75f720e3930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.7.0/24",
            "id": "subnet-0b8a8b75f720e3930",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654676797716",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "dependencies": [
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:subnet/subnet-00a33e98a0bf9a1bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.8.0/24",
            "id": "subnet-00a33e98a0bf9a1bf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654676797716",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "dependencies": [
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-demo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:subnet/subnet-0b646b04505688837",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.16.0/24",
            "id": "subnet-0b646b04505688837",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654676797716",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "dependencies": [
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-demo.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:subnet/subnet-04ec51d4ef9da0064",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.17.0/24",
            "id": "subnet-04ec51d4ef9da0064",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654676797716",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0242f03df17fc8572"
          },
          "dependencies": [
            "module.vpc-demo.aws_vpc.this",
            "module.vpc-demo.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-demo",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654676797716:vpc/vpc-0242f03df17fc8572",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-05b32f14a79538727",
            "default_route_table_id": "rtb-06fd3fc5f3f865d23",
            "default_security_group_id": "sg-0f56ccf5c9f752fdf",
            "dhcp_options_id": "dopt-7196d61a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0242f03df17fc8572",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06fd3fc5f3f865d23",
            "owner_id": "654676797716",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-demo-chila",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-demo-chila",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}